--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="inner">
 			<header>
 				<h2><a href="project.html">Mount Huang Villa ICO Project</a></h2>
-				<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+				<p class="info">June 6, 2017 by <a href="#">Jes</a></p>
 			</header>
 			<p>Only 1000XLM you can earn rent</p>
 			<ul class="actions">
