--- a/project.html
+++ b/project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Generic - </title>
+<title>StellarICO - </title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="assets/css/main.css" />
@@ -10,7 +10,7 @@
 
 <!-- Header -->
 <header id="header">
-	<a href="index.html" class="logo"><strong>ChinaZ</strong></a>
+	<a href="index.html" class="logo"><strong>StellarICO</strong></a>
 	<nav>
 		<a href="#menu">Menu</a>
 	</nav>
@@ -33,7 +33,7 @@
 		</div>
 		<header>
 			<h1>Mount Huang Villa ICO Project</h1>
-			<p class="info">3 days ago by <a href="#">Jane Doe</a></p>
+			<p class="info">June 6, 2017  <a href="#"></a></p>
 		</header>
 		<p><strong>Project plan</strong></p>
 		<p>I want ICO to buy a villa in Mount Huang China for vacation rent on Airbnb 
