--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Home</title>
+<title>StellarICO</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="assets/css/main.css" />
@@ -45,7 +45,7 @@
 		<div class="inner">
 			<header>
 				<h2><a href="project.html">Mount Huang Villa ICO Project</a></h2>
-				<p class="info">June 6, 2017 by <a href="#">Jes</a></p>
+				<p class="info">June 6, 2017  <a href="#"></a></p>
 			</header>
 			<p>Only 1000XLM you can earn rent</p>
 			<ul class="actions">
